# KiThe

./: Cargo.toml  README.md  all_keys_substance.json  build.rs  elements.json  library_config.json  substance_base_v2.json  tgasettings.json
examples/: chem_equilibrium_constant_validation_example.rs  chem_equilibrium_gas_example.rs  chem_equilibrium_guides.md  chem_equilibrium_temperature_postprocessing_example.rs  error_handling_example.rs  kinetics_guide_construct_mechanism.rs  kinetics_guide_custom_reaction_payloads.rs  kinetics_guide_local_database_lookup.rs  kinetics_guide_shortcuts_and_rate_constants.rs  kinetics_guides.md  reactors_bvp_guides.md  reactors_ivp_guides.md  reactors_ivp_preview.rs  thermodynamics_guide_canonical_accessors.rs  thermodynamics_guides.md
examples/library_handling/: library_manager_example.rs
examples/plots/: plot_test.rs
src/: Examples.rs  Kinetics.rs  ReactorsBVP.rs  ReactorsIVP.rs  Thermodynamics.rs  User_reactions.rs  User_substances.rs  Utils.rs  cli.rs  gui.rs  kinetics_lib_api.rs  lib.rs  library_manager.rs  library_manager2.rs  main.rs  molmass.rs  parsetask.rs  reaction_analyzer.rs  settings.rs  simple_combustion_models.rs
src/Examples/: ClassicalThermodynamics_examples.rs  NIST_examples.rs  SubstanceDataCollecting.rs  kinetics_examples.rs  thermo_examples.rs
src/Kinetics/: TODO_ANALYSIS.md  User_reactions.rs  User_reactions_tests.rs  User_substances.rs  error.rs  experimental_kinetics.rs  kinetics_lib_api.rs  mechfinder_api.rs  molmass.rs  parsetask.rs  solid_state_kinetics_IVP.rs  stoichiometry_analyzer.rs
src/Kinetics/experimental_kinetics/: LSQSplines.rs  LSQSplines2.rs  LSQSplines_tests.rs  (+20 more)
src/ReactorsBVP/: SimpleReactorBVP.rs  SimpleReactorBVP2.rs  SimpleReactorBVP3.rs  TODO_ANALYSIS.md  createBVP.rs  reactor_BVP_utils.rs  reactor_bvp_matrix_tests.rs  reactor_bvp_story_tests.rs  reactor_bvp_test_support.rs  simple_reactor_bvp_tests.rs  simple_reactor_bvp_tests2.rs  solver_backend.rs  task_parser_reactor_BVP.rs  task_value_conversion.rs
src/ReactorsIVP/: SimpleReactorIVP.rs  SimpleReactorIVP2.rs  SimpleReactorIVP3.rs  TODO_ANALYSIS.md  createIVP.rs  reactor_ivp_aot_story_tests.rs  reactor_ivp_contract_tests.rs  reactor_ivp_quality_tests.rs  reactor_ivp_solve_tests.rs  reactor_ivp_solver_backend_tests.rs  reactor_ivp_story_tests.rs  simple_reactor_ivp_tests.rs  simple_reactor_ivp_tests2.rs  solver_backend.rs  task_parser_reactor_IVP.rs  task_parser_reactor_ivp_tests.rs
src/Thermodynamics/: ChemEquilibrium.rs  DBhandlers.rs  PHASE_ARCHITECTURE.md  PHASE_ARCHITECTURE_RU.md  TODO_ANALYSIS.md  User_PhaseOrSolution.rs  User_PhaseOrSolution2.rs  User_PhaseOrSolution_tests.rs  User_substances.rs  User_substances2.rs  User_substances3.rs  User_substances_error.rs  User_substances_error_tests.rs  User_substances_presets.rs  User_substances_tests.rs  User_substances_tests2.rs  dG_dS.rs  phase_cache.rs  phase_domain.rs  phase_elements.rs  phase_equilibrium_adapter.rs  phase_evaluation.rs  phase_facade.rs  phase_factory.rs  phase_interfaces.rs  phase_layout.rs  phase_legacy_api.rs  phase_moles.rs  phase_operations.rs  phase_property_builders.rs  phase_system.rs  phase_system_facade.rs  physical_state.rs  prelude.rs  thermo_lib_api.rs
src/Utils/: load_from_file.rs  parser.rs  show_this_pic.rs
src/assets/: TGAexample.txt  TGAexample2.txt  help_eng.md  help_rus.md
src/cli/: cli_bvp_reactor.rs  cli_examples.rs  cli_main.rs  cli_solid_state_ivp.rs  reactor_help.rs
src/gui/: NIST_gui.rs  TODO.md  TODO_ANALYSIS.md  all_libs_gui.rs  bvp_gui_config.rs  combustion.rs  combustion_execution.rs  combustion_gui_tests.rs  combustion_lifecycle.rs  combustion_preview_tests.rs  combustion_story_tests.rs  combustion_test.rs  condition_parser.rs  document_lifecycle.rs  experimental_kinetics_gui.rs  gui_main.rs  gui_plot.rs  gui_solid_ivp.rs  ivp_common.rs  kinetics.rs  kinetics_gui.rs  reactor_ivp_gui.rs  reactor_ivp_gui_lifecycle_tests.rs  reactor_ivp_gui_quality_tests.rs  reactor_ivp_gui_tests.rs  reactor_ivp_lifecycle.rs  read_only_snapshot.rs  settings_gui.rs  thermochemistry_gui.rs  thermochemistry_gui_tests.rs  thermochemistry_story_tests.rs  transport_gui.rs  transport_gui_tests.rs  transport_story_tests.rs
src/simple_combustion_models/: zeldovich.rs
(+114 files in other folders)
