[package]
name = "KiThe"
version = "0.3.2"
edition = "2024"
author = "Gleb Zasllavsky"
license = "MIT"
keywords = [ "thermodynamics", "chemistry", "CFD", "chemical_kinetics"]
description = "A numerical suite for chemical kinetics and thermodynamics, combustion, heat and mass transfer,chemical engeneering. Work in progress. Advices and contributions will be appreciated"
repository = "https://github.com/Gleb-Zaslavsky/KiThe"

[dependencies]
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
tabled = "0.20.0"
strum = "0.28.0"
strum_macros = "0.28.0"
serde_json = "1.0.149"
loc = "0.5.0"
RustedSciThe = "0.3.31"
rayon = "1.11.0"
nalgebra = { version = "0.34.1", features = ["serde"] }
prettytable-rs = "0.10.0"
simplelog = "0.12.2"
log = "0.4.29"
approx = "0.5.1"
reqwest = { version = "0.13.2", features = ["blocking"] }
scraper = "0.25.0"
url = "2.5.8"
thiserror = "2.0.18"
enum_dispatch = "0.3.13"
tempfile = "3.26.0"
reborrow = "0.5.5"
nom = "8.0.0"
eframe = "0.32.3"
egui = "0.32.3"
egui_plot = "0.33.0"
egui_kittest = "0.32.3"
rfd = "0.17.2"
plotters = "0.3"
chrono = "0.4.41"
dialoguer = "0.12.0"
egui_extras = "0.32.3"
polars ={ version = "0.53.0", features = ["lazy", "csv", "parquet", "rolling_window", "polars-ops"] }
ndarray = "0.17.2"

ndarray-stats = "0.7.0"
rand = "0.10.0"
rand_distr = "0.6.0"
splines = "5.0.0"
bspline = "1.1.0"


lstsq = "0.7.0"
KiThePlot = "0.5.0"
fastLowess = "1.1.2"
[build-dependencies]
winres = "0.1"



[profile.release]
lto = true
codegen-units = 1
panic = "abort"
[profile.dev]
opt-level = 0
debug = false 




